# tamama

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  main.go
.github/workflows/: ci.yml  release.yml
src/: boid.rs  config.rs  main.rs  simulation.rs  ui.rs
